--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HuxP - Vocaloid Producer</title>
+    <title>HuxP</title>
     <link rel="stylesheet" href="styles.css"> <!-- Create a separate CSS file for styling -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> <!-- Use Roboto Bold for header text -->
     <style>
@@ -19,9 +19,7 @@
         header {
             text-align: center;
             padding: 20px;
-            background-image: url('https://wallpapercave.com/wp/wp1991769.jpg');
-            background-size: cover;
-            background-position: center;
+            background-color: #212121; /* Darker Background */
             transition: background-color 0.5s;
             position: relative;
             overflow: hidden;
@@ -38,7 +36,7 @@
         }
 
         h1 span:hover {
-            animation: colorChange 0.5s infinite;
+            animation: colorChange 0.2s infinite;
         }
 
         @keyframes colorChange {
@@ -97,13 +95,27 @@
 
         img.miku {
             max-width: 100%;
-            max-height: 200px;
+            max-height: 150px;
             margin-bottom: 20px;
-            transition: transform 0.3s ease-out;
+            transition: transform 0.1s ease-out;
         }
 
         img.miku:hover {
-            transform: translateY(-10px);
+            animation: jump 0.5s ease-out infinite;
+        }
+
+        @keyframes jump {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-15px);
+            }
+
+            60% {
+                transform: translateY(-10px);
+            }
         }
 
         footer {
@@ -121,13 +133,8 @@
     <!-- Header Section -->
     <header>
         <img class="miku" src="https://static.wikia.nocookie.net/projectsekai/images/6/66/Hatsune_Miku_-_VIRTUAL_SINGER_Chibi.png" alt="Jumping Miku Chibi">
-        <h1><span>H</span><span>u</span><span>x</span><span>P</span> - Vocaloid Producer</h1>
+        <h1><span>H</span><span>u</span><span>x</span><span>P</span></h1>
     </header>
-
-    <!-- Banner Section -->
-    <section id="banner">
-        <img src="https://wallpapercave.com/wp/wp1991769.jpg" alt="Banner Image" style="max-width: 100%; height: auto;">
-    </section>
 
     <!-- Album Sections -->
     <div class="collapsible">
