--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             font-weight: bold; /* Make header text bold */
             display: inline-block;
             margin: 0;
+            font-size: 1.5em; /* Adjust font size for responsiveness */
         }
 
         h1 span:hover {
@@ -76,9 +77,10 @@
             outline: none;
             border: none;
             background-color: #424242; /* Darker Background for Collapsible Headers */
-            color: #ff80ab; /* Miku Pink */
+            color: #ffffff; /* White text for better readability */
             border-radius: 5px;
             margin-bottom: 10px;
+            font-size: 1.2em; /* Adjust font size for responsiveness */
         }
 
         .content {
@@ -95,7 +97,7 @@
 
         img.miku {
             max-width: 100%;
-            max-height: 150px;
+            height: auto;
             margin-bottom: 20px;
             transition: transform 0.1s ease-out;
         }
