--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
             background-color: #212121; /* Darker Background for Collapsible Content */
             padding: 20px;
             border-radius: 5px;
+            opacity: 0; /* Set initial opacity to 0 */
         }
 
         .collapsible.active .content {
             max-height: 1000px; /* Adjust to a suitable max height */
             transition: max-height 0.5s ease-in;
+            opacity: 1; /* Make the box visible when uncollapsed */
         }
 
         footer {
@@ -150,8 +152,10 @@
                 var content = this.querySelector(".content");
                 if (content.style.maxHeight) {
                     content.style.maxHeight = null;
+                    content.style.opacity = 0;
                 } else {
                     content.style.maxHeight = content.scrollHeight + "px";
+                    content.style.opacity = 1;
                 }
             });
         }
