--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <div class="collapsible">
-        <h2>VocaPulse (Unreleased, In the Works)</h2>
+        <h2>VocpPulse (Upcoming album)</h2>
         <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin efficitur massa in nisi pharetra, vel finibus mi finibus.</p>
         </div>
