--- a/index.html
+++ b/index.html
@@ -1,165 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HuxP</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Create a separate CSS file for styling -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> <!-- Use Roboto Bold for header text -->
+    <title>Cortana</title>
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #121212; /* Dark Background */
-            color: #ff80ab; /* Miku Pink */
+            background-color: #00a4ef;
+            color: white;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            padding: 0;
-        }
-
-        header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             text-align: center;
+        }
+        .container {
+            background-color: rgba(0, 0, 0, 0.6);
             padding: 20px;
-            background-color: #212121; /* Darker Background */
-            transition: background-color 0.5s;
-        }
-
-        header:hover {
-            background-color: #424242; /* Darker Background on Hover */
-        }
-
-        h1 {
-            font-weight: bold; /* Make header text bold */
-            margin: 0;
-            font-size: 1.5em; /* Adjust font size for responsiveness */
-        }
-
-        h1 span:hover {
-            animation: colorChange 1s infinite; /* Adjusted animation speed to 1s */
-        }
-
-        @keyframes colorChange {
-            0% {
-                color: #ff80ab; /* Miku Pink */
-            }
-
-            25% {
-                color: #80deea; /* Lighter Miku Blue */
-            }
-
-            50% {
-                color: #f06292; /* Lighter Pink */
-            }
-
-            75% {
-                color: #40c4ff; /* Darker Miku Blue */
-            }
-
-            100% {
-                color: #ff80ab; /* Miku Pink */
-            }
-        }
-
-        section {
-            margin: 20px;
-            padding: 20px;
-            background-color: #212121; /* Darker Background for Sections */
             border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-
-        .collapsible {
-            cursor: pointer;
-            padding: 18px;
-            width: 100%;
-            text-align: left;
-            outline: none;
-            border: none;
-            background-color: #424242; /* Darker Background for Collapsible Headers */
-            color: #ffffff; /* White text for better readability */
-            border-radius: 5px;
-            margin-bottom: 10px;
-            font-size: 1.2em; /* Adjust font size for responsiveness */
-            position: relative;
-        }
-
-        .content {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease-out;
-            background-color: #212121; /* Darker Background for Collapsible Content */
-            padding: 20px;
-            border-radius: 5px;
-            opacity: 0; /* Set initial opacity to 0 */
-        }
-
-        .collapsible.active .content {
-            max-height: 1000px; /* Adjust to a suitable max height */
-            transition: max-height 0.5s ease-in;
-            opacity: 1; /* Make the box visible when uncollapsed */
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #424242;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+        img {
+            margin-top: 20px;
+            width: 150px;
+            height: auto;
+            border-radius: 50%;
         }
     </style>
 </head>
-
 <body>
-    <!-- Header Section -->
-    <header>
-        <h1><span>H</span><span>u</span><span>x</span><span>P</span></h1>
-    </header>
-
-    <!-- Album Sections -->
-    <div class="collapsible">
-        <h2>Vocarips (2023)</h2>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin efficitur massa in nisi pharetra, vel finibus mi finibus.</p>
-        </div>
+    <div class="container">
+        <h1>I honestly don't use GitHub anymore but take a Cortana</h1>
+        <img src="https://vocadb.net/Artist/Picture/80232" alt="Cortana Image">
     </div>
-
-    <div class="collapsible">
-        <h2>Vocadiva (2024)</h2>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin efficitur massa in nisi pharetra, vel finibus mi finibus.</p>
-        </div>
-    </div>
-
-    <div class="collapsible">
-        <h2>Vocapulse (Upcoming album)</h2>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin efficitur massa in nisi pharetra, vel finibus mi finibus.</p>
-        </div>
-    </div>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 HuxP. All rights reserved.</p>
-    </footer>
-
-    <script>
-        // Script for collapsible sections
-        var coll = document.getElementsByClassName("collapsible");
-        var i;
-
-        for (i = 0; i < coll.length; i++) {
-            coll[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var content = this.querySelector(".content");
-                if (content.style.maxHeight) {
-                    content.style.maxHeight = null;
-                    content.style.opacity = 0;
-                } else {
-                    content.style.maxHeight = content.scrollHeight + "px";
-                    content.style.opacity = 1;
-                }
-            });
-        }
-    </script>
 </body>
-
 </html>
