--- a/index.html
+++ b/index.html
@@ -3,37 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cortana</title>
+    <title>Windows 8</title>
     <style>
         body {
-            background-color: #00a4ef;
+            background-image: url('https://wallpapercave.com/wp/wp3456247.png');
+            background-size: cover;
             color: white;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             text-align: center;
         }
-        .container {
+        .admin-bar {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            max-width: 800px;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.8);
+            border-radius: 5px;
+            margin-bottom: 20px;
+            align-items: center;
+        }
+        .admin-bar img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+        .admin-bar .admin-info {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .admin-bar .search-button {
             background-color: rgba(0, 0, 0, 0.6);
+            border: none;
+            padding: 5px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .admin-bar .search-button img {
+            width: 20px;
+            height: 20px;
+        }
+        .start-screen {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 10px;
             padding: 20px;
+            background-color: rgba(0, 0, 0, 0.6);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-        img {
-            margin-top: 20px;
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
+        .tile {
+            background-color: rgba(0, 0, 0, 0.8);
+            border: none;
+            padding: 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-width: 100px;
+            min-height: 100px;
+        }
+        .tile:hover {
+            background-color: rgba(0, 0, 0, 1);
+        }
+        .tile img {
+            width: 50px;
+            height: 50px;
+        }
+        .tile span {
+            margin-top: 10px;
+            font-size: 12px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>I honestly don't use GitHub anymore but take a Cortana</h1>
-        <img src="https://vocadb.net/Artist/Picture/80232" alt="Cortana Image">
+    <div class="admin-bar">
+        <div class="admin-info">
+            <img src="https://via.placeholder.com/40" alt="Admin Icon">
+            <span>Admin</span>
+        </div>
+        <button class="search-button">
+            <img src="https://via.placeholder.com/20" alt="Search Icon">
+        </button>
+    </div>
+    <div class="start-screen">
+        <a class="tile" href="https://twitter.com/HuxPMusic" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Windows_Live_Mail_Icon.png/1024px-Windows_Live_Mail_Icon.png" alt="Twitter Icon">
+            <span>Twitter</span>
+        </a>
+        <a class="tile" href="https://www.youtube.com/channel/UCjgGQNn6dPbnuLTvuRLTu5Q" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/Windows_Media_Center_Logo.png" alt="YouTube Icon">
+            <span>YouTube</span>
+        </a>
+        <a class="tile" href="http://huxpmusic.com" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Internet_Explorer_9_icon.png/600px-Internet_Explorer_9_icon.png" alt="Website Icon">
+            <span>Website</span>
+        </a>
+        <a class="tile" href="https://github.com/HuxPMusic" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Windows_Command_Prompt_Icon.png/1024px-Windows_Command_Prompt_Icon.png" alt="GitHub Icon">
+            <span>GitHub</span>
+        </a>
+        <a class="tile" href="https://www.roblox.com/users/803982030/profile" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/en/1/19/Purble_Place_Icon.png" alt="Roblox Icon">
+            <span>Roblox</span>
+        </a>
+        <!-- Additional tiles for more flushed out UI -->
+        <div class="tile">
+            <img src="https://via.placeholder.com/50" alt="Placeholder Icon">
+            <span>App 1</span>
+        </div>
+        <div class="tile">
+            <img src="https://via.placeholder.com/50" alt="Placeholder Icon">
+            <span>App 2</span>
+        </div>
+        <div class="tile">
+            <img src="https://via.placeholder.com/50" alt="Placeholder Icon">
+            <span>App 3</span>
+        </div>
+        <div class="tile">
+            <img src="https://via.placeholder.com/50" alt="Placeholder Icon">
+            <span>App 4</span>
+        </div>
     </div>
 </body>
 </html>
