--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Windows 8 Start Menu Theme</title>
+    <title>Welcome to Windows 8</title>
     <style>
         body {
             background-image: url('https://wallpapercave.com/wp/wp3456247.png');
@@ -96,49 +96,49 @@
 <body>
     <div class="admin-bar">
         <div class="admin-info">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Folders-OS-User-With-Frame-Metro-icon.png" alt="Admin Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-contact-128.png" alt="Admin Icon">
             <span>Admin</span>
         </div>
         <button class="search-button">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Folders-OS-Search-Metro-icon.png" alt="Search Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-search-128.png" alt="Search Icon">
         </button>
     </div>
     <div class="start-screen">
         <a class="tile" href="https://twitter.com/HuxPMusic" target="_blank">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Messaging-Twitter-icon.png" alt="Twitter Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-128.png" alt="Twitter Icon">
             <span>Twitter</span>
         </a>
         <a class="tile" href="https://www.youtube.com/channel/UCjgGQNn6dPbnuLTvuRLTu5Q" target="_blank">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Web-Youtube-alt-Metro-icon.png" alt="YouTube Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/youtube_circle-128.png" alt="YouTube Icon">
             <span>YouTube</span>
         </a>
         <a class="tile" href="http://huxpmusic.com" target="_blank">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Web-Internet-Explorer-Metro-icon.png" alt="Website Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/ie_circle-128.png" alt="Website Icon">
             <span>Website</span>
         </a>
         <a class="tile" href="https://github.com/HuxPMusic" target="_blank">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Other-Task-Manager-Metro-icon.png" alt="GitHub Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-gear-128.png" alt="GitHub Icon">
             <span>GitHub</span>
         </a>
         <a class="tile" href="https://www.roblox.com/users/803982030/profile" target="_blank">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Games-Minesweeper-Metro-icon.png" alt="Roblox Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/game_center_circle-128.png" alt="Roblox Icon">
             <span>Roblox</span>
         </a>
         <!-- Additional tiles for more flushed out UI -->
         <div class="tile">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Apps-Metro-icon.png" alt="Placeholder Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
             <span>App 1</span>
         </div>
         <div class="tile">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Apps-Metro-icon.png" alt="Placeholder Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
             <span>App 2</span>
         </div>
         <div class="tile">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Apps-Metro-icon.png" alt="Placeholder Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
             <span>App 3</span>
         </div>
         <div class="tile">
-            <img src="https://cdn.iconarchive.com/icons/dakirby309/windows-8-metro/256/Apps-Metro-icon.png" alt="Placeholder Icon">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
             <span>App 4</span>
         </div>
     </div>
