--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Windows 8</title>
+    <title>:3</title>
     <style>
+        @keyframes rainbow {
+            0% { color: #ff9a9e; }
+            14% { color: #fad0c4; }
+            28% { color: #fad0c4; }
+            42% { color: #fcb69f; }
+            57% { color: #ff9a9e; }
+            71% { color: #fcb69f; }
+            85% { color: #ff9a9e; }
+            100% { color: #ff9a9e; }
+        }
+        
         body {
             background-image: url('https://wallpapercave.com/wp/wp3456247.png');
             background-size: cover;
@@ -38,7 +49,12 @@
             align-items: center;
             gap: 10px;
         }
-        .admin-bar .search-button {
+        .admin-bar .admin-info span {
+            animation: rainbow 5s infinite;
+            background-clip: text;
+            color: transparent;
+        }
+        .admin-bar .search-button, .admin-bar .power-button {
             background-color: rgba(0, 0, 0, 0.6);
             border: none;
             padding: 5px;
@@ -46,10 +62,10 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-        .admin-bar .search-button:hover {
+        .admin-bar .search-button:hover, .admin-bar .power-button:hover {
             background-color: rgba(0, 0, 0, 0.8);
         }
-        .admin-bar .search-button img {
+        .admin-bar .search-button img, .admin-bar .power-button img {
             width: 20px;
             height: 20px;
         }
@@ -91,16 +107,32 @@
             margin-top: 10px;
             font-size: 12px;
         }
+        #power-off-screen {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            color: white;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
     <div class="admin-bar">
         <div class="admin-info">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-contact-128.png" alt="Admin Icon">
+            <img src="https://icons.iconarchive.com/icons/dakirby309/windows-8-metro/256/Folders-OS-User-No-Frame-Metro-icon.png" alt="Admin Icon">
             <span>Admin</span>
         </div>
         <button class="search-button">
             <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-search-128.png" alt="Search Icon">
+        </button>
+        <button class="power-button" onclick="showPowerOffScreen()">
+            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-power-128.png" alt="Power Icon">
         </button>
     </div>
     <div class="start-screen">
@@ -113,34 +145,30 @@
             <span>YouTube</span>
         </a>
         <a class="tile" href="http://huxpmusic.com" target="_blank">
-            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/ie_circle-128.png" alt="Website Icon">
+            <img src="https://cdn0.iconfinder.com/data/icons/flat-round-system/512/internet-128.png" alt="Website Icon">
             <span>Website</span>
         </a>
         <a class="tile" href="https://github.com/HuxPMusic" target="_blank">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-gear-128.png" alt="GitHub Icon">
+            <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png" alt="GitHub Icon">
             <span>GitHub</span>
         </a>
         <a class="tile" href="https://www.roblox.com/users/803982030/profile" target="_blank">
-            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/game_center_circle-128.png" alt="Roblox Icon">
+            <img src="https://cdn0.iconfinder.com/data/icons/free-games/128/free-games-32-128.png" alt="Roblox Icon">
             <span>Roblox</span>
         </a>
-        <!-- Additional tiles for more flushed out UI -->
-        <div class="tile">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
-            <span>App 1</span>
-        </div>
-        <div class="tile">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
-            <span>App 2</span>
-        </div>
-        <div class="tile">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
-            <span>App 3</span>
-        </div>
-        <div class="tile">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-apps-128.png" alt="Placeholder Icon">
-            <span>App 4</span>
-        </div>
     </div>
+
+    <div id="power-off-screen">
+        <h1>Shutting down...</h1>
+    </div>
+
+    <audio id="shutdown-sound" src="https://www.myinstants.com/media/sounds/windows-8-shutdown-sound.mp3"></audio>
+
+    <script>
+        function showPowerOffScreen() {
+            document.getElementById('power-off-screen').style.display = 'flex';
+            document.getElementById('shutdown-sound').play();
+        }
+    </script>
 </body>
 </html>
