--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Windows 8 Start Menu Theme</title>
+    <title>⭐</title>
     <style>
         @keyframes rainbow {
             0%, 100% { color: #ff9a9e; }
@@ -16,9 +16,8 @@
         }
         
         body {
-            background-image: url('https://wallpapercave.com/wp/wp3456247.png');
-            background-size: cover;
-            color: white;
+            background-color: #ffebef;
+            color: #ff9a9e;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             display: flex;
@@ -33,7 +32,7 @@
             width: 100%;
             max-width: 800px;
             padding: 10px;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(255, 182, 193, 0.8);
             border-radius: 5px;
             margin-top: 20px;
             align-items: center;
@@ -54,7 +53,7 @@
             color: transparent;
         }
         .admin-bar .search-button, .admin-bar .power-button {
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(255, 182, 193, 0.6);
             border: none;
             padding: 5px;
             border-radius: 5px;
@@ -62,26 +61,33 @@
             transition: background-color 0.3s;
         }
         .admin-bar .search-button:hover, .admin-bar .power-button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(255, 182, 193, 0.8);
         }
         .admin-bar .search-button img, .admin-bar .power-button img {
             width: 20px;
             height: 20px;
+        }
+        .search-bar {
+            margin-left: 10px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ff9a9e;
+            outline: none;
         }
         .start-screen {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
             gap: 20px;
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(255, 182, 193, 0.6);
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 1200px;
             margin-top: 20px;
             overflow: auto;
         }
         .tile {
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(255, 182, 193, 0.8);
             border: none;
             padding: 20px;
             border-radius: 5px;
@@ -95,7 +101,7 @@
             min-height: 100px;
         }
         .tile:hover {
-            background-color: rgba(0, 0, 0, 1);
+            background-color: rgba(255, 182, 193, 1);
             transform: scale(1.1);
         }
         .tile img {
@@ -105,6 +111,7 @@
         .tile span {
             margin-top: 10px;
             font-size: 12px;
+            color: #ff9a9e;
         }
         #power-off-screen {
             display: none;
@@ -113,11 +120,12 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: rgba(255, 182, 193, 0.9);
             color: white;
             justify-content: center;
             align-items: center;
             z-index: 1000;
+            font-size: 24px;
         }
         #bob-image {
             display: none;
@@ -142,32 +150,33 @@
             <img src="https://icons.iconarchive.com/icons/dakirby309/windows-8-metro/256/Folders-OS-User-No-Frame-Metro-icon.png" alt="Admin Icon">
             <span>Admin</span>
         </div>
-        <button class="search-button" onclick="focusSearchBar()">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-search-128.png" alt="Search Icon">
+        <input type="text" class="search-bar" id="search-bar" placeholder="Search...">
+        <button class="search-button" onclick="searchFunction()">
+            <img src="https://cdn-icons-png.flaticon.com/512/483/483356.png" alt="Search Icon">
         </button>
         <button class="power-button" onclick="showPowerOffScreen()">
-            <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-power-128.png" alt="Power Icon">
+            <img src="https://cdn-icons-png.flaticon.com/512/748/748122.png" alt="Power Icon">
         </button>
     </div>
     <div class="start-screen">
         <a class="tile" href="https://twitter.com/HuxPMusic" target="_blank">
-            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-128.png" alt="Twitter Icon">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter Icon">
             <span>Twitter</span>
         </a>
         <a class="tile" href="https://www.youtube.com/channel/UCjgGQNn6dPbnuLTvuRLTu5Q" target="_blank">
-            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/youtube_circle-128.png" alt="YouTube Icon">
+            <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube Icon">
             <span>YouTube</span>
         </a>
         <a class="tile" href="http://huxpmusic.com" target="_blank">
-            <img src="https://cdn0.iconfinder.com/data/icons/flat-round-system/512/internet-128.png" alt="Website Icon">
+            <img src="https://cdn-icons-png.flaticon.com/512/1782/1782765.png" alt="Website Icon">
             <span>Website</span>
         </a>
         <a class="tile" href="https://github.com/HuxPMusic" target="_blank">
-            <img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-128.png" alt="GitHub Icon">
+            <img src="https://cdn-icons-png.flaticon.com/512/270/270798.png" alt="GitHub Icon">
             <span>GitHub</span>
         </a>
         <a class="tile" href="https://www.roblox.com/users/803982030/profile" target="_blank">
-            <img src="https://cdn0.iconfinder.com/data/icons/free-games/128/free-games-32-128.png" alt="Roblox Icon">
+            <img src="https://cdn-icons-png.flaticon.com/512/861/861398.png" alt="Roblox Icon">
             <span>Roblox</span>
         </a>
     </div>
@@ -177,7 +186,9 @@
         <p>:3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3</p>
     </div>
 
-    <audio id="shutdown-sound" src="https://www.myinstants.com/media/sounds/windows-8-shutdown-sound.mp3"></audio>
+    <div id="bob-image" class="hidden"></div>
+
+    <audio id="shutdown-sound" src="https://archive.org/download/windows-8-sounds/Windows8_sounds.zip/Windows%20Shutdown.wav"></audio>
 
     <script>
         function showPowerOffScreen() {
@@ -185,21 +196,18 @@
             document.getElementById('shutdown-sound').play();
         }
 
-        function focusSearchBar() {
-            // Simulate focusing on the search bar
+        function searchFunction() {
+            const searchValue = document.getElementById('search-bar').value.toLowerCase();
+            if (searchValue === 'bob') {
+                document.getElementById('bob-image').classList.toggle('hidden');
+            } else if (searchValue === 'miku') {
+                window.location.href = 'https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi1.wp.com%2Fkillscreen.com%2Fwp-content%2Fuploads%2Fsites%2F2%2F2016%2F06%2Foriginal.jpg%3Fresize%3D800%252C1115%26ssl%3D1&f=1&nofb=1&ipt=01712edeb2a51ad5706106d72ec1268d718a60c02ffaf44ef90639a2fe61c665&ipo=images';
+            }
         }
 
-        document.addEventListener('keydown', function(event) {
-            if (event.key.toLowerCase() === 'b' || event.key.toLowerCase() === 'o' || event.key.toLowerCase() === 'b') {
-                const bobImage = document.getElementById('bob-image');
-                if (bobImage.style.display === 'none' || bobImage.style.display === '') {
-                    bobImage.style.display = 'block';
-                } else {
-                    bobImage.style.display = 'none';
-                }
-            }
-            if (event.key.toLowerCase() === 'm' && event.key.toLowerCase() === 'i' && event.key.toLowerCase() === 'k' && event.key.toLowerCase() === 'u') {
-                window.location.href = 'https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi1.wp.com%2Fkillscreen.com%2Fwp-content%2Fuploads%2Fsites%2F2%2F2016%2F06%2Foriginal.jpg%3Fresize%3D800%252C1115%26ssl%3D1&f=1&nofb=1&ipt=01712edeb2a51ad5706106d72ec1268d718a60c02ffaf44ef90639a2fe61c665&ipo=images';
+        document.getElementById('search-bar').addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
+                searchFunction();
             }
         });
     </script>
