--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cute Pink Start Menu</title>
+    <title>⭐</title>
     <style>
         @keyframes rainbow {
-            0%, 100% { color: #ff9a9e; }
-            14% { color: #fad0c4; }
-            28% { color: #fcb69f; }
-            42% { color: #ff9a9e; }
-            57% { color: #fcb69f; }
-            71% { color: #ff9a9e; }
-            85% { color: #fcb69f; }
+            0%, 100% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
         }
 
         body {
@@ -48,9 +43,12 @@
             gap: 10px;
         }
         .admin-bar .admin-info span {
+            font-size: 18px;
+            background: linear-gradient(180deg, #ff9a9e, #fad0c4, #fad0c4, #fcb69f, #ff9a9e, #fcb69f, #ff9a9e);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-size: 100% 200%;
             animation: rainbow 5s infinite;
-            background-clip: text;
-            color: transparent;
         }
         .admin-bar .search-button, .admin-bar .power-button {
             background-color: rgba(255, 182, 193, 0.6);
@@ -60,6 +58,7 @@
             cursor: pointer;
             transition: background-color 0.3s;
             font-size: 20px;
+            color: white;
         }
         .admin-bar .search-button:hover, .admin-bar .power-button:hover {
             background-color: rgba(255, 182, 193, 0.8);
@@ -71,6 +70,8 @@
             border: 1px solid #d47c7c;
             outline: none;
             font-size: 16px;
+            color: #d47c7c;
+            background-color: white;
         }
         .start-screen {
             display: grid;
@@ -97,20 +98,23 @@
             justify-content: center;
             min-width: 100px;
             min-height: 100px;
+            color: white;
         }
         .tile:hover {
             background-color: rgba(255, 182, 193, 1);
             transform: scale(1.1);
         }
-        .tile img {
-            width: 50px;
-            height: 50px;
-            filter: grayscale(100%);
+        .tile span:first-child {
+            font-size: 50px;
         }
-        .tile span {
+        .tile span:last-child {
             margin-top: 10px;
             font-size: 14px;
-            color: #d47c7c;
+            color: #fff;
+        }
+        .tile a {
+            text-decoration: none;
+            color: inherit;
         }
         #power-off-screen {
             display: none;
