--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>HuxP | Official Mirror -> https://github.com/huxpmusic/huxpmusic.github.com</title>
+		<title>HuxP | Official Mirror @ GitHub</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light only" />
-		<meta name="description" content="Last updated 22.8.2024." />
+		<meta name="description" content="Official mirror from GitHub.com/HuxPMusic/HuxPMusic.GitHub.com." />
 		<meta property="og:site_name" content="HuxP | Official Website" />
 		<meta property="og:title" content="HuxP | Official Website" />
 		<meta property="og:type" content="website" />
